--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.25",
-    "@storybook/addon-essentials": "^8.0.5",
-    "@storybook/addon-interactions": "^8.0.5",
-    "@storybook/addon-links": "^8.0.5",
-    "@storybook/addon-onboarding": "^8.0.5",
-    "@storybook/blocks": "^8.0.5",
-    "@storybook/nextjs": "^8.0.5",
-    "@storybook/react": "^8.0.5",
-    "@storybook/test": "^8.0.5",
+    "@storybook/addon-essentials": "^8.1.0-alpha.5",
+    "@storybook/addon-interactions": "^8.1.0-alpha.5",
+    "@storybook/addon-links": "^8.1.0-alpha.5",
+    "@storybook/addon-onboarding": "^8.1.0-alpha.5",
+    "@storybook/blocks": "^8.1.0-alpha.5",
+    "@storybook/nextjs": "^8.1.0-alpha.5",
+    "@storybook/react": "^8.1.0-alpha.5",
+    "@storybook/test": "^8.1.0-alpha.5",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "eslint-plugin-storybook": "^0.8.0",
-    "storybook": "^8.0.5"
+    "storybook": "^8.1.0-alpha.5"
   }
 }
