--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -22,6 +22,9 @@ jobs:
 
       - name: Build Storybook
         run: npm run build-storybook
+        env:
+          API_KEY: ${{secrets.API_KEY}}
+          SERVICE_DOMAIN: ${{secrets.SERVICE_DOMAIN}}
 
       - name: Deploy Storybook
         uses: peaceiris/actions-gh-pages@v3
