--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -21,10 +21,10 @@ jobs:
         run: npm ci
 
       - name: Build Storybook
-        env:
-          API_KEY: ${{secrets.API_KEY}},
-          SERVICE_DOMAIN: ${{secrets.SERVICE_DOMAIN}}
-        run: npm run build-storybook
+        run: |
+          npm run build-storybook
+          echo ${{secrets.API_KEY}},
+          echo ${{secrets.SERVICE_DOMAIN}}
 
       - name: Deploy Storybook
         uses: peaceiris/actions-gh-pages@v3
