--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -21,10 +21,7 @@ jobs:
         run: npm ci
 
       - name: Build Storybook
-        run: |
-          npm run build-storybook
-          echo ${{secrets.API_KEY}},
-          echo ${{secrets.SERVICE_DOMAIN}}
+        run: npm run build-storybook
 
       - name: Deploy Storybook
         uses: peaceiris/actions-gh-pages@v3
