--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@next/third-parties": "^14.1.4",
     "html-react-parser": "^5.1.9",
     "microcms-js-sdk": "^3.0.0",
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
