--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook": "test-storybook"
   },
   "dependencies": {
     "@next/third-parties": "^14.1.4",
@@ -28,6 +29,7 @@
     "@storybook/nextjs": "^8.1.0-alpha.5",
     "@storybook/react": "^8.1.0-alpha.5",
     "@storybook/test": "^8.1.0-alpha.5",
+    "@storybook/test-runner": "^0.17.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "eslint-plugin-storybook": "^0.8.0",
