--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@next/third-parties": "^14.1.4",
     "html-react-parser": "^5.1.9",
+    "lodash.throttle": "^4.1.1",
     "microcms-js-sdk": "^3.0.0",
     "next": "^14.1.4",
     "react": "^18",
